--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://bootswatch.com/4/superhero/bootstrap.min.css"
     />
 
-    <title>Pixabay React App</title>
+    <title>Pixabay App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
